--- a/src/styles/Google.css
+++ b/src/styles/Google.css
@@ -37,6 +37,23 @@
     width: 45%;
     max-width: 700px;
   }
+
+  .searchbar2{
+    font-size: 14px;
+    font-family: arial, sans-serif;
+    color: #202124;
+    display: flex;
+    z-index: 3;
+    height: 44px;
+    background: white;
+    border: 1px solid #dfe1e5;
+    box-shadow: none;
+    border-radius: 24px;
+    margin: 0 40px;
+    width: 45%;
+    max-width: 700px;
+    justify-content: flex-start;
+  }
   
   .searchbar:hover {
     box-shadow: 0 1px 6px rgb(32 33 36 / 28%);
