--- a/src/styles/SearchBar.css
+++ b/src/styles/SearchBar.css
@@ -8,7 +8,7 @@
 .searchBar_container_bar{
     display: flex;
     align-items: center;
-    padding: 20px;
+    padding: 30px 20px;
 }
 
 .searchBar_container_bar_img{
@@ -18,4 +18,40 @@
 .searchBar_container_bar_main{
     display: flex;
     flex-direction: column;
+}
+
+.searchBar_container_categories{
+    display: flex;
+    gap: 2em;
+align-items: center;
+padding: 0px 0 20px 180px;
+
+}
+
+.searchBar_container_categories_btn{
+    padding: 0;
+    background-color: transparent;
+    color: #797D82;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    flex-direction: row;
+    gap: .4em;
+    font-weight:500;
+    cursor: pointer;
+}
+
+.search_line{
+    width: 100%;
+    height: .009em;
+    background-color: #5d5e60;
+}
+
+.results_number{
+    color: #9AA0A6;
+    padding: 16px 180px 20px;
+    font-size: 14px;
+
 }
